Basic Selenium test

--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,23 @@
             <artifactId>selenium-java</artifactId>
             <version>4.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>23.0</version>
+        </dependency>
+        <dependency>
+            <groupId>ru.yandex.qatools.ashot</groupId>
+            <artifactId>ashot</artifactId>
+            <version>1.5.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.7.0</version>
+            <scope>compile</scope>
+        </dependency>
+
 
     </dependencies>
 <!--też trzeba wpisać na sztywno-->
@@ -75,11 +92,11 @@
                     <testFailureIgnore>true</testFailureIgnore>
 <!--                    poniżej ścieżka do scenariusza, on zrobi tylko ten co jest wskazany,
                         dodajesz kolejne w tym polu po przecinku-->
-                    <suiteXmlFiles>src/main/resources/calculatorSuite.xml</suiteXmlFiles>
+<!--                    <suiteXmlFiles>src/main/resources/calculatorSuite.xml</suiteXmlFiles>-->
+                    <suiteXmlFiles>src/main/resources/basicSeleniumSuite.xml</suiteXmlFiles>
                 </configuration>
             </plugin>
         </plugins>
     </build>
-
 
 </project>
